placeholder routes/components

--- a/client/less/components.less
+++ b/client/less/components.less
@@ -2,3 +2,4 @@
 @import "./components/Sidebar.less";
 @import "./components/Panel.less";
 @import "./components/Map.less";
+@import "./components/Landing.less";
