--- a/client/less/components/Sidebar.less
+++ b/client/less/components/Sidebar.less
@@ -95,22 +95,22 @@
   margin-bottom: 100px;
 }
 
-.toolbar-nav [href='/'] {
+.toolbar-nav [href='/adapt'] {
   background-image: url("/img/sidenav/home.png");
 }
 
-.toolbar-nav [href='/toolbox'] {
+.toolbar-nav [href='/adapt/toolbox'] {
   background-image: url("/img/sidenav/toolbox.png");
 }
 
-.toolbar-nav [href='/map'] {
+.toolbar-nav [href='/adapt/map'] {
   background-image: url("/img/sidenav/map.png");
 }
 
-.toolbar-nav [href='/about'] {
+.toolbar-nav [href='/adapt/about'] {
   background-image: url("/img/sidenav/about.png");
 }
 
-.toolbar-nav [href='/share'] {
+.toolbar-nav [href='/adapt/share'] {
   background-image: url("/img/sidenav/share.png");
 }
