--- a/client/less/main.less
+++ b/client/less/main.less
@@ -27,7 +27,7 @@ body {
   font-family: 'Helvetica Neue', Helvetica, sans-serif;
   font-weight: 200;
   background-color: @background;
-  color: white;
+  color: #9D9D9D;
 }
 
 
@@ -41,7 +41,6 @@ body {
   margin-left: @toolbar-width;
   max-width: 100%;
 }
-
 
 @media print {
   .panel{ border: none!important }
