--- a/client/less/components/Map.less
+++ b/client/less/components/Map.less
@@ -1,12 +1,23 @@
 @import '../../node_modules/mapbox.js/theme/style.css';
 
 body { margin:0; padding:0; }
-#map { position:absolute; top:0; bottom:0; left: 0; width:100%; z-index: -100; }
+#map { 
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 600px;
+    z-index: -100;
+    margin-top: 100px;
+    border-radius: 10px;
+}
 
 #map-ui {
-    position: absolute;
-    top: 75px;
-    left: 100px;
+    position: relative;
+    top: 110px;
+    left: 0px;
+    width: 100px;
     list-style: none;
     margin: 0;
     padding: 0;
