fullscreen css fixes

--- a/client/less/components/Map.less
+++ b/client/less/components/Map.less
@@ -10,7 +10,7 @@ body { margin:0; padding:0; }
     height: 600px;
     z-index: -100;
     margin-top: 100px;
-    border-radius: 10px;
+    // border-radius: 10px;
 }
 
 #map-ui {
