--- a/client/less/main.less
+++ b/client/less/main.less
@@ -37,6 +37,11 @@ body {
   }
 }
 
+.main {
+  height: 100vh;
+  overflow: hidden;
+}
+
 .centered {
   margin-left: @toolbar-width;
   max-width: 100%;
