--- a/client/less/components/Landing.less
+++ b/client/less/components/Landing.less
@@ -2,7 +2,7 @@
     background: url("http://adaptoakland.org/wp-content/uploads/2013/04/3.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    min-height: 1200px;
+    min-height: 100vh;
     text-align: center;
     padding-top: 100px;
 }
