numerous revisions to support multiple maps, limited URL tag state

--- a/client/less/components/Sidebar.less
+++ b/client/less/components/Sidebar.less
@@ -82,7 +82,7 @@
 
 /* Sidebar Icons */
 
-.toolbar-nav [href] {
+.toolbar-nav a {
   float: left;
   width: 38px;
   height: 38px;
@@ -103,7 +103,7 @@
   background-image: url("/img/sidenav/toolbox.png");
 }
 
-.toolbar-nav [href='/adapt/map'] {
+.toolbar-nav #map-icon {
   background-image: url("/img/sidenav/map.png");
 }
 
