--- a/client/less/components/Map.less
+++ b/client/less/components/Map.less
@@ -14,15 +14,18 @@
 }
 
 #map-ui {
-    position: relative;
-    top: 110px;
-    left: 0px;
-    width: 100px;
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    width: 180px;
     list-style: none;
     margin: 0;
     padding: 0;
     z-index: 100;
+    max-height: 400px;
+    overflow-y: scroll;
 }
+
 #map-ui a {
     font: normal 13px/18px 'Helvetica Neue', Helvetica, sans-serif;
     background: #FFF;
