--- a/client/less/components.less
+++ b/client/less/components.less
@@ -3,3 +3,4 @@
 @import "./components/Panel.less";
 @import "./components/Map.less";
 @import "./components/Landing.less";
+@import "./components/Home.less";
