--- a/client/less/components/Landing.less
+++ b/client/less/components/Landing.less
@@ -4,18 +4,29 @@
     background-size: cover;
     min-height: 100vh;
     text-align: center;
-    padding-top: 100px;
+    padding: 30px;
 }
 
 .row.banner > a {
     color: white;
     text-decoration: none;
+    text-align: center;
 }
 
 .row.banner > a > h1 {
-    font-size: 160px;
+    font-size: 100px;
+    padding: 15px;
+    color: rgba(255,255,255,1);
 }
 
 .row.banner > a > h3 {
     font-size: 48px
 }
+
+
+.landing_icon{
+  height: 500px;
+  margin: auto;
+  display: block;
+}
+
