--- a/client/less/components/Landing.less
+++ b/client/less/components/Landing.less
@@ -1,5 +1,5 @@
 .row.banner{
-    background: url("http://adaptoakland.org/wp-content/uploads/2013/04/3.jpg");
+    background: url("/img/static/img_freeway.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 100vh;
