--- a/client/less/components/Home.less
+++ b/client/less/components/Home.less
@@ -1,20 +1,20 @@
 .bg-light {
   background: rgba(216,216,216,.7);
-  border-radius: 8px;
-  margin-bottom: 20px;
-  height: 20%;
-}
-
-
-.home-options{
-	width: 90%;
-	height: 30vh;
 }
 
 
 .home-heading{
 	position: relative;
     width: 100%;
+}
+
+.home-heading > p {
+  clear: left;
+}
+
+.home-description {
+  margin-right: 30px;
+  margin-left: -30px;
 }
 
 .options-icon {
@@ -25,12 +25,44 @@
 }
 
 .options-heading {
-    position: absolute;
-    left: 90px;
-    top: -1px;
-    text-align: left;
-    font-size: 22px;
-    line-height: 26px;
-
+  font-size: 22px;
+  line-height: 26px;
+  vertical-align: bottom;
+  height: 75px;
+  float: left;
+  text-align: left;
+  margin-left: 15px;
 }
 
+.home {
+  height: 70vh;
+  overflow: hidden;
+}
+
+.home > .col-md-3 {
+  height: 100%;
+} 
+
+.home-description > h3{
+  margin:0px 0px 20px 0px;
+}
+
+
+
+.home-description > p{
+    text-align: justify;
+    width: 90%;
+    line-height: 1.2;
+}
+
+.home-options{
+  width: 90%;
+  border-radius: 8px;
+  height: 48%;
+  overflow: hidden;
+  padding: 15px;
+}
+
+.home-options:last-child{
+  margin-top: 4%;
+}
