--- a/client/less/components.less
+++ b/client/less/components.less
@@ -2,5 +2,6 @@
 @import "./components/Sidebar.less";
 @import "./components/Panel.less";
 @import "./components/Map.less";
+@import "./components/Data.less";
 @import "./components/Landing.less";
 @import "./components/Home.less";
