various report css fixes

--- a/client/less/components/Home.less
+++ b/client/less/components/Home.less
@@ -8,9 +8,8 @@
     width: 100%;
 }
 
-.home-heading > p {
+.home-heading {
   clear: left;
-  color: white;
 }
 
 .home-description {
@@ -48,8 +47,6 @@
   margin:0px 0px 20px 0px;
 }
 
-
-
 .home-description > p{
     text-align: justify;
     width: 90%;
@@ -62,6 +59,14 @@
   height: 48%;
   overflow: hidden;
   padding: 15px;
+}
+
+.home-options p {
+  color: white;
+}
+
+.home-description p {
+  color: white;
 }
 
 .home-options:last-child{
