--- a/client/less/components/Data.less
+++ b/client/less/components/Data.less
@@ -4,9 +4,11 @@
 
 #data { 
     height: 100%;
+    width: 100%;
 }
 
 #data > .body { 
     height: 100%;
-    overflow-x: auto;
+    overflow-y: auto;
+    overflow-wrap: break-word;
 }
