--- a/client/less/main.less
+++ b/client/less/main.less
@@ -3,6 +3,8 @@
 @import "./variables.less";
 @import "./components.less";
 
+
+
 // @brand-success: #18B4BC;
 
 @brand-primary:         #F3CD60; // YELLOW
@@ -38,18 +40,51 @@ body {
 }
 
 
+/*
+ * Header
+ */
+
 #header {
-    top: 0;
+    top: 0px;
     position: absolute;
-    right: 0;
+    right: 14px;
     z-index: 1000;
+    width: 200px;
+    padding: 15px 30px 0 0;
+    vertical-align: middle;
 }
 
+
+#header .info {
+  display: inline;
+  float: left;
+}
+
+#header h1 {
+    font-family: 'Dosis', sans-serif;
+    font-size: 30px;
+    text-transform: uppercase;
+    text-align: right;
+    color: white;
+    margin: 0px;
+    letter-spacing: 2px;
+    margin-bottom: -10px;
+}
+
+#header svg {
+  width: 40%;
+  float:right;
+  // padding: 10px 0 0 3px;
+}
+
+
+.my_addthis-style {
+  opacity: .5;
+}
 
 /*
  * Fonts
  */
-
 
 
 h1 {
@@ -109,6 +144,12 @@ p {
 }
 
 
+
+/*
+ * Text
+ */
+
+
 .text-scroll-body{
     background-color: rgba(255,255,255,.9);
     border-radius: 8px;
@@ -134,6 +175,10 @@ p {
 .left {
   text-align: left;
 }
+
+
+
+
 
 
 
