much cleaner modal logic, fixed chart issues

--- a/client/less/components/Data.less
+++ b/client/less/components/Data.less
@@ -7,8 +7,17 @@
     width: 100%;
 }
 
-#data > .body { 
+#data .row { 
     height: 100%;
-    overflow-y: auto;
+}
+
+#data .row > * { 
+    height: 100%;
+}
+
+#data .body { 
+    height: 100%;
+    overflow-y: scroll;
+    overflow-x: hidden;
     overflow-wrap: break-word;
 }
