--- a/client/less/main.less
+++ b/client/less/main.less
@@ -92,6 +92,23 @@ body {
   float: right;
 }
 
+
+/*
+ * Resources
+ */
+
+ #resources svg{
+  width: 30px;
+ }
+
+#resources .row{
+  height: 40px;
+}
+
+#resources span{
+  vertical-align: super;
+  margin-left: 20px;
+}
 /*
  * Fonts
  */
