Add MapTooltip on hover

--- a/client/less/components.less
+++ b/client/less/components.less
@@ -2,6 +2,7 @@
 @import "./components/Sidebar.less";
 @import "./components/Panel.less";
 @import "./components/Map.less";
+@import "./components/MapTooltip.less";
 @import "./components/Data.less";
 @import "./components/Landing.less";
 @import "./components/Home.less";
