fixed map group styling

--- a/client/less/components/Sidebar.less
+++ b/client/less/components/Sidebar.less
@@ -95,8 +95,41 @@
   margin-bottom: 83px;
 }
 
-.popover-content {
-  width: 240px;
-  max-height: 360px;
-  overflow: auto;
+.second-nav {
+  position: absolute;
+  top: 0;
+  left: 55px;
+  padding: 10px;
+  // background: rgb(187, 207, 177);
+  background: rgb(193, 193, 193);
+  width: 220px;
+  z-index: 100;
+  height: 100vh;
+  font-size: 8pt;
+  overflow-y: scroll;
+}
+
+.second-nav ul {
+  padding-left: 5px;
+}
+
+.second-nav li {
+  list-style: none;
+  line-height: 14px;
+}
+
+.second-nav li a {
+  display: block;
+  text-decoration: none;
+  color: #999999;
+}
+
+.second-nav h3 {
+  font-size: 10pt;
+  line-height: 12pt;
+}
+
+.status-indicator {
+  float: right;
+  font-size: 20px;
 }
