reworked layouts per redesign

--- a/client/less/components/Dashboard_1.less
+++ b/client/less/components/Dashboard_1.less
@@ -7,10 +7,9 @@
   background-color: @background;
 }
 
-// For some reason, react-grid-layout transforms things off-center
-// This recenters things
+// Offset by sidebar. Should this be a variable?
 .layout{
-    margin-left: -0.2vw;
+    margin-left: 200px;
 }
 
 .panel{
