--- a/client/less/components/Sidebar.less
+++ b/client/less/components/Sidebar.less
@@ -100,13 +100,17 @@
   top: 0;
   left: 55px;
   padding: 10px;
-  // background: rgb(187, 207, 177);
-  background: rgb(193, 193, 193);
+  background: #F8F8F8;
   width: 220px;
   z-index: 100;
   height: 100vh;
   font-size: 8pt;
   overflow-y: scroll;
+}
+
+.second-nav .panel-heading {
+  color: white;
+  background-color: rgb(147, 195, 124)!important
 }
 
 .second-nav ul {
@@ -116,6 +120,11 @@
 .second-nav li {
   list-style: none;
   line-height: 14px;
+}
+
+.second-nav ul>li:hover, .second-nav li>h3:hover { 
+  cursor: pointer;
+  background-color: rgba(147, 195, 124, 0.3);
 }
 
 .second-nav li a {
@@ -131,5 +140,7 @@
 
 .status-indicator {
   float: right;
+  cursor: pointer;
   font-size: 20px;
+  color: rgb(147, 195, 124);
 }
