various tweaks to markup

--- a/client/less/components/Sidebar.less
+++ b/client/less/components/Sidebar.less
@@ -108,6 +108,18 @@
   overflow-y: scroll;
 }
 
+.second-nav .map-header {
+  color: rgb(147, 195, 124);
+}
+
+.second-nav .map-header h3:first-child {
+  float: left;
+}
+
+.second-nav .map-header h3:last-child {
+  float: right;
+}
+
 .second-nav .panel-heading {
   color: white;
   background-color: rgb(147, 195, 124)!important
