--- a/client/less/components/Map.less
+++ b/client/less/components/Map.less
@@ -2,6 +2,12 @@
 
 // body { margin:0; padding:0; }
 
+// Fix for resizing map component
+.mapboxgl-canvas-container > canvas {
+    width: inherit !important;
+    height: inherit !important;
+}
+
 #map { 
     position: absolute;
     top: 0;
