--- a/client/less/components/Dashboard_1.less
+++ b/client/less/components/Dashboard_1.less
@@ -20,9 +20,10 @@
   color: @brand-info;
   background-color: white;
   overflow: hidden;
-  border: solid 1px;
+  border: solid 1px white;
   border-radius: 10px;
   padding: 0px;
+  box-shadow: 10px 5px 5px rgba(0,0,0,0.25), 0px 0px 5px rgba(0,0,0,0.25);
 }
 
 .table {
