--- a/client/less/components/Home.less
+++ b/client/less/components/Home.less
@@ -1,5 +1,6 @@
 .bg-light {
   background: rgba(216,216,216,.7);
+  box-shadow: 10px 5px 5px rgba(0,0,0,0.25), 0px 0px 5px rgba(0,0,0,0.25);
 }
 
 
@@ -55,17 +56,18 @@
   overflow-x: hidden;
   overflow-y: hidden;
   height: 300px;
-  padding: 15px;
+  // padding: 15px;
 }
 
 .home-options > p{
   clear: left;
 }
 
-.home-options > .body{
-  overflow-y: scroll;
-  overflow-x: hidden;
+.home-options > * {
+  overflow-y: auto;
   height: 100%;
+  border-radius: 25px;
+  padding: 10px;
 }
 
 .home-options:last-child{
