--- a/client/less/components/Sidebar.less
+++ b/client/less/components/Sidebar.less
@@ -16,12 +16,14 @@
   height: 100%;
   list-style: none;
   background: @toolbar-background;
+  box-shadow: 10px 5px 5px rgba(0,0,0,0.25), 0px 0px 5px rgba(0,0,0,0.25);
 }
 
 .toolbar-nav.bottom {
   top: inherit;
   bottom: 0px;
   height: inherit;
+  box-shadow: none;
 }
 
 .toolbar-nav li { 
@@ -102,10 +104,11 @@
   padding: 10px;
   background: #F8F8F8;
   width: 220px;
-  z-index: 100;
+  // z-index: 100;
   height: 100vh;
   font-size: 8pt;
   overflow-y: scroll;
+  box-shadow: 10px 5px 5px rgba(0,0,0,0.25), 0px 0px 5px rgba(0,0,0,0.25);
 }
 
 .second-nav .map-header {
