various style fixes

--- a/client/less/components/Home.less
+++ b/client/less/components/Home.less
@@ -1,5 +1,5 @@
 .bg-light {
-  background: rgba(216,216,216,.7);
+  background: rgba(255, 255, 255, 0.8);
   box-shadow: 10px 5px 5px rgba(0,0,0,0.25), 0px 0px 5px rgba(0,0,0,0.25);
 }
 
@@ -10,8 +10,7 @@
 }
 
 .home-description {
-  margin-right: 30px;
-  margin-left: -30px;
+  padding: 0px 30px;
 }
 
 .options-icon {
@@ -63,7 +62,7 @@
   clear: left;
 }
 
-.home-options > * {
+.home-options > div, .home-options > p {
   overflow-y: auto;
   height: 100%;
   border-radius: 25px;
