--- a/client/less/components/Sidebar.less
+++ b/client/less/components/Sidebar.less
@@ -103,7 +103,7 @@
   left: 55px;
   padding: 10px;
   background: #F8F8F8;
-  width: 220px;
+  width: 250px;
   // z-index: 100;
   height: 100vh;
   font-size: 8pt;
@@ -158,4 +158,9 @@
   cursor: pointer;
   font-size: 20px;
   color: rgb(147, 195, 124);
+}
+
+.second-nav .panel-body{
+    max-height: 60vh;
+    overflow-y: auto;
 }
