various style enhancements

--- a/client/less/components/Sidebar.less
+++ b/client/less/components/Sidebar.less
@@ -135,6 +135,7 @@
 .second-nav li {
   list-style: none;
   line-height: 14px;
+  clear: left;
 }
 
 .second-nav ul>li:hover, .second-nav li>h3:hover { 
