additonal misc style tweaks

--- a/client/less/components/Data.less
+++ b/client/less/components/Data.less
@@ -21,3 +21,14 @@
     overflow-x: hidden;
     overflow-wrap: break-word;
 }
+
+.widget > .container{
+  height: 100%;
+  width: 100%;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+.widget .body {
+  overflow: visible!important;
+}
