made map radio buttons more visible

--- a/client/less/components/Sidebar.less
+++ b/client/less/components/Sidebar.less
@@ -157,8 +157,13 @@
 .status-indicator {
   float: right;
   cursor: pointer;
-  font-size: 20px;
-  color: rgb(147, 195, 124);
+  font-size: 27px;
+  color: #00A535;
+  transition: 0.5s ease;
+}
+
+.status-indicator:hover{
+  color: rgba(100, 100, 100, 0.5);
 }
 
 .second-nav .panel-body{
