fixed SVG issues with heade r

--- a/client/less/main.less
+++ b/client/less/main.less
@@ -63,11 +63,11 @@ body {
   float: right;
 }
 
-#header svg {
-    width: 75px;
-    padding: 10px;
-  float:right;
+#header > svg {
+  width: 75px;
+  float: right;
   display: inline-block;
+  padding: 10px;
 }
 
 #header .fill-colour {
