--- a/client/less/components/Landing.less
+++ b/client/less/components/Landing.less
@@ -19,13 +19,15 @@
     margin-top: @icon-height;
     font-size: 100px;
     padding: 15px;
-    color: rgba(255,255,255,1);
 }
 
 .row.banner > a > h3 {
     font-size: 48px
 }
 
+.row.banner .glyphicon {
+  font-size:48px
+}
 
 .landing_icon{
     height: @icon-height;
