--- a/client/less/main.less
+++ b/client/less/main.less
@@ -130,8 +130,7 @@ h1, h2, h3, h4, h5 {
   color: rgba(100, 100, 100, 0.5);
 }
 
-h1 {
-  font-family: 'Arial Rounded MT Bold', 'Helvetica', Arial, sans-serif;
+h1.special {
   font-size: 63px;
   font-style: normal;
   font-variant: normal;
@@ -139,13 +138,20 @@ h1 {
   line-height: 58.8px;
 }
 
-h3 {
-  font-family: 'Arial Rounded MT Bold', 'Helvetica', Arial, sans-serif;
+h3.special {
   font-size: 30px;
   font-style: normal;
   font-variant: normal;
   font-weight: 400;
   line-height: 36px;
+}
+
+h1 {
+  font-family: 'Arial Rounded MT Bold', 'Helvetica', Arial, sans-serif;
+}
+
+h3 {
+  font-family: 'Arial Rounded MT Bold', 'Helvetica', Arial, sans-serif;
 }
 
 p {
@@ -222,7 +228,7 @@ a:hover , a:hover svg {
     font-weight: 300;
     font-size: 13px;
     text-align: left;
-    box-shadow: 10px 5px 5px rgba(0,0,0,0.25), 0px 0px 5px rgba(0,0,0,0.25);
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.15), 0px 0px 5px rgba(0, 0, 0, 0.15);
 }
 
 .text-scroll{
