--- a/client/less/components/Home.less
+++ b/client/less/components/Home.less
@@ -1,6 +1,6 @@
 .bg-light {
   background: rgba(255, 255, 255, 0.8);
-  box-shadow: 10px 5px 5px rgba(0,0,0,0.25), 0px 0px 5px rgba(0,0,0,0.25);
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.15), 0px 0px 5px rgba(0, 0, 0, 0.15);
 }
 
 
