--- a/client/less/components/Sidebar.less
+++ b/client/less/components/Sidebar.less
@@ -16,7 +16,7 @@
   height: 100%;
   list-style: none;
   background: @toolbar-background;
-  box-shadow: 10px 5px 5px rgba(0,0,0,0.25), 0px 0px 5px rgba(0,0,0,0.25);
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.15), 0px 0px 5px rgba(0, 0, 0, 0.15);
 }
 
 .toolbar-nav.bottom {
@@ -108,7 +108,7 @@
   height: 100vh;
   font-size: 8pt;
   overflow-y: scroll;
-  box-shadow: 10px 5px 5px rgba(0,0,0,0.25), 0px 0px 5px rgba(0,0,0,0.25);
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.15), 0px 0px 5px rgba(0, 0, 0, 0.15);
 }
 
 .second-nav .map-header {
