in-progress mobile style fixes

--- a/client/less/components/Dashboard_1.less
+++ b/client/less/components/Dashboard_1.less
@@ -9,7 +9,7 @@
 
 // Offset by sidebar. Should this be a variable?
 .layout{
-    margin-left: 200px;
+    margin-left: @sidebar-width;
 }
 
 .panel{
