--- a/client/less/components/Sidebar.less
+++ b/client/less/components/Sidebar.less
@@ -30,58 +30,6 @@
     height: auto;
 }
 
-.sidebar-nav {
-  position: absolute;
-  top: 0;
-  width: 250px;
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-.sidebar-nav.bottom {
-  top: inherit;
-  bottom: 0px;
-}
-
-.sidebar-nav li {
-  text-indent: 20px;
-  line-height: 40px;
-}
-
-.sidebar-nav li a {
-  display: block;
-  text-decoration: none;
-  color: #999999;
-}
-
-.sidebar-nav li a:hover {
-  text-decoration: none;
-  color: #fff;
-  background: rgba(255,255,255,0.2);
-}
-
-.sidebar-nav li a:active,
-.sidebar-nav li a:focus {
-  text-decoration: none;
-}
-
-.sidebar-nav > .sidebar-brand {
-  height: 65px;
-  font-size: 18px;
-  line-height: 60px;
-}
-
-
-.sidebar-nav > .sidebar-brand a {
-  color: #999999;
-}
-
-.sidebar-nav > .sidebar-brand a:hover {
-  color: #fff;
-  background: none;
-}
-
 /* Sidebar Icons */
 
 .toolbar-nav a {
@@ -103,7 +51,7 @@
   left: 55px;
   padding: 10px;
   background: #F8F8F8;
-  width: 250px;
+  width: @sidebar-width;
   // z-index: 100;
   height: 100vh;
   font-size: 8pt;
