--- a/client/less/main.less
+++ b/client/less/main.less
@@ -307,7 +307,7 @@ only screen
 
       // FIXME: Need to make second-nav expandable so to work with mobile
       // These two attributes will have to respond to add/remove classes
-      .second-nav:hover{
+      .all-bars:hover .second-nav{
         // display: none;
         opacity: 0.85;
         z-index: 800;
