swapped out basemap, fixed tooltip

--- a/client/less/components/Sidebar.less
+++ b/client/less/components/Sidebar.less
@@ -29,7 +29,7 @@
   top: inherit;
   bottom: 0px;
   height: inherit;
-  box-shadow: none;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.15);
 }
 
 .toolbar-nav li { 
