--- a/client/less/main.less
+++ b/client/less/main.less
@@ -150,6 +150,11 @@ h1 {
   font-family: 'Arial Rounded MT Bold', 'Helvetica', Arial, sans-serif;
 }
 
+
+h2 {
+  font-family: 'Arial Rounded MT Bold', 'Helvetica', Arial, sans-serif;
+}
+
 h3 {
   font-family: 'Arial Rounded MT Bold', 'Helvetica', Arial, sans-serif;
 }
