--- a/client/less/main.less
+++ b/client/less/main.less
@@ -127,6 +127,7 @@ body {
  * Fonts
  */
 h1, h2, h3, h4, h5 {
+  // color: grey;
   color: rgba(100, 100, 100, 0.5);
 }
 
@@ -148,15 +149,18 @@ h3.special {
 
 h1 {
   font-family: 'Arial Rounded MT Bold', 'Helvetica', Arial, sans-serif;
+  color: rgba(120, 188, 87, 0.7);
 }
 
 
 h2 {
   font-family: 'Arial Rounded MT Bold', 'Helvetica', Arial, sans-serif;
+  color: rgba(120, 188, 87, 0.7);
 }
 
 h3 {
   font-family: 'Arial Rounded MT Bold', 'Helvetica', Arial, sans-serif;
+  color: rgba(120, 188, 87, 0.7);
 }
 
 p {
@@ -171,6 +175,7 @@ a, a svg{
 
 a:hover , a:hover svg {
   text-decoration: none;
+  // color: grey;
   color: rgba(100, 100, 100, 0.5);
 }
 
