--- a/client/less/main.less
+++ b/client/less/main.less
@@ -126,8 +126,8 @@ body {
 /*
  * Fonts
  */
-h1, h2, h3, h4, h5 {
-  // color: grey;
+h2, h3, h4, h5 {
+  // color: green;
   color: rgba(100, 100, 100, 0.5);
 }
 
@@ -149,18 +149,15 @@ h3.special {
 
 h1 {
   font-family: 'Arial Rounded MT Bold', 'Helvetica', Arial, sans-serif;
-  color: rgba(120, 188, 87, 0.7);
+  color: rgba(100, 100, 100, 0.5);
 }
-
 
 h2 {
   font-family: 'Arial Rounded MT Bold', 'Helvetica', Arial, sans-serif;
-  color: rgba(120, 188, 87, 0.7);
 }
 
 h3 {
   font-family: 'Arial Rounded MT Bold', 'Helvetica', Arial, sans-serif;
-  color: rgba(120, 188, 87, 0.7);
 }
 
 p {
