--- a/client/less/main.less
+++ b/client/less/main.less
@@ -128,7 +128,7 @@ body {
  */
 h2, h3, h4, h5 {
   // color: green;
-  color: rgba(100, 100, 100, 0.5);
+  color: rgba(120, 188, 87, 0.7);
 }
 
 h1.special {
@@ -150,14 +150,17 @@ h3.special {
 h1 {
   font-family: 'Arial Rounded MT Bold', 'Helvetica', Arial, sans-serif;
   color: rgba(100, 100, 100, 0.5);
+  font-size: 30px;
 }
 
 h2 {
   font-family: 'Arial Rounded MT Bold', 'Helvetica', Arial, sans-serif;
+  font-size: 25px;
 }
 
 h3 {
   font-family: 'Arial Rounded MT Bold', 'Helvetica', Arial, sans-serif;
+  font-size: 20px;
 }
 
 p {
