--- a/client/less/components/Sidebar.less
+++ b/client/less/components/Sidebar.less
@@ -7,9 +7,10 @@
 
 /* Sidebar Styles */
 .all-bars{
-  width: @toolbar-width + @sidebar-width;
-  height: 100vh;
+  // width: @toolbar-width + @sidebar-width;
+  height: 100%;
   position: absolute;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.15), 0px 0px 5px rgba(0, 0, 0, 0.15);
 }
 
 
@@ -19,17 +20,17 @@
   width: @toolbar-width;
   margin: 0;
   padding: 8px;
-  height: 80vh;
+  height: 100%;
   list-style: none;
   background: @toolbar-background;
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.15), 0px 0px 5px rgba(0, 0, 0, 0.15);
+  // box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.15), 0px 0px 5px rgba(0, 0, 0, 0.15);
 }
 
 .toolbar-nav.bottom {
-  top: inherit;
-  bottom: 0px;
-  height: inherit;
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.15);
+  top: 80vh;
+  height: 100px;
+  /* box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.15); */
+  position: absolute;
 }
 
 .toolbar-nav li { 
@@ -59,7 +60,7 @@
   background: #F8F8F8;
   width: @sidebar-width;
   // z-index: 100;
-  height: 100vh;
+  height: 100%;
   font-size: 8pt;
   overflow-y: scroll;
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.15), 0px 0px 5px rgba(0, 0, 0, 0.15);
