placeholder responsive hints

--- a/client/less/main.less
+++ b/client/less/main.less
@@ -302,6 +302,12 @@ a:hover , a:hover svg {
   max-width: 100%;
 }
 
+.responsive-hints{
+  font-size: 14px;
+  font-weight: bold;
+  display: none;
+}
+
 @media only screen 
     and (min-device-width: 320px) and (max-device-width: 736px) and (orientation: portrait),
 only screen
@@ -325,5 +331,9 @@ only screen
 
       .layout{
         margin-left: 0px;
+      }
+
+      .responsive-hints{
+        display: block;
       }
 }
