improvements to resource popovers, added captions for images, tables, and charts

--- a/client/less/main.less
+++ b/client/less/main.less
@@ -107,8 +107,8 @@ body {
 
 .popover{
   box-shadow: 0 0 1em #5F5F5F;
-  max-width: 600px;
-  max-height: 800px;
+  max-width: 50vw;
+  max-height: 50vh;
   overflow: hidden;
   // padding
 }
