added support for nav menu items w/o map layers

--- a/client/less/components/Sidebar.less
+++ b/client/less/components/Sidebar.less
@@ -109,6 +109,14 @@
   line-height: 12pt;
 }
 
+.map-menu-layer{
+  font-weight: 500;
+}
+
+.map-menu-layer.disable-nav{
+  font-weight: 200;
+}
+
 .status-indicator {
   float: right;
   cursor: pointer;
