in-progress auth stuff

--- a/client/less/main.less
+++ b/client/less/main.less
@@ -43,6 +43,12 @@ body {
   color: @text-color;
 }
 
+.login{
+  width: 33vw;
+  margin-left: 33vw;
+  margin-top: 33vh;
+  color: darkgray!important;
+}
 /*
  * Header
  */
