Added ability to switch basemaps

--- a/client/less/components.less
+++ b/client/less/components.less
@@ -3,6 +3,7 @@
 @import "./components/Panel.less";
 @import "./components/Map.less";
 @import "./components/MapTooltip.less";
+@import "./components/BasemapToggle.less";
 @import "./components/Data.less";
 @import "./components/Landing.less";
 @import "./components/Home.less";
