added basic map legend

--- a/client/less/components.less
+++ b/client/less/components.less
@@ -4,6 +4,7 @@
 @import "./components/Map.less";
 @import "./components/MapTooltip.less";
 @import "./components/BasemapToggle.less";
+@import "./components/MapLegend.less";
 @import "./components/Data.less";
 @import "./components/Landing.less";
 @import "./components/Home.less";
