--- a/client/less/main.less
+++ b/client/less/main.less
@@ -214,6 +214,7 @@ a:hover , a:hover svg {
     min-height: 100vh;
     text-align: center;
     padding-top: 100px;
+    padding-left: 30px;
     margin-left: -15px;
 }
 
@@ -223,8 +224,10 @@ a:hover , a:hover svg {
     background-size: cover;
     min-height: 100vh;
     text-align: center;
-    padding: 30px; 
+    padding-right: 30px;
+    margin-top: 100px;
 }
+
 
 
 
@@ -238,7 +241,6 @@ a:hover , a:hover svg {
     background-color: rgba(255, 255, 255, 0.9);
     border-radius: 8px;
     height: 80vh;
-    margin-top: 73px;
     overflow: hidden;
     font-weight: 300;
     font-size: 13px;
