additional style fixes

--- a/client/less/main.less
+++ b/client/less/main.less
@@ -312,8 +312,7 @@ a:hover , a:hover svg {
 // }
 
 .main {
-  height: 99vh;
-  overflow-y: scroll;
+  overflow-y: auto;
   overflow-x: hidden;
 }
 
