various responsive fixes

--- a/client/less/components/Home.less
+++ b/client/less/components/Home.less
@@ -27,16 +27,13 @@
 }
 
 .home {
-  height: 70vh;
+  height: 100%;
   margin-right: 15px;
+  padding-bottom: 100px;
 }
 
-.home > .col-md-3 {
-  height: 100%;
-} 
-
-.home-description{
-  padding-left: 4vh;
+.home > * {
+  padding-top: 100px;
 }
 
 .home-description > h3{
@@ -54,7 +51,7 @@
   border-radius: 8px;
   transition: 0.5s ease;
   overflow-x: hidden;
-  overflow-y: hidden;
+  overflow-y: auto;
   height: 38vh;
   background: lightgray;
   border: solid 3px #9CCE89;
