--- a/client/less/components/Sidebar.less
+++ b/client/less/components/Sidebar.less
@@ -27,8 +27,9 @@
 }
 
 .toolbar-nav.bottom {
-  top: 80vh;
-  height: 100px;
+  top: auto;
+  bottom: 60px;
+  height: 60px;
   /* box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.15); */
   position: absolute;
 }
