--- a/client/less/main.less
+++ b/client/less/main.less
@@ -223,18 +223,16 @@ a:hover , a:hover svg {
     background-color: @adapt-green;
     background-repeat: no-repeat;
     background-size: cover;
-    min-height: 100vh;
     text-align: center;
-    padding-top: 100px;
     padding-left: 30px;
     margin-left: -15px;
+    height: auto;
 }
 
 .bg-toolbox {
     background-color: inherit;
     background-repeat: no-repeat;
     background-size: cover;
-    min-height: 100vh;
     text-align: center;
     padding-right: 30px;
     margin-top: 100px;
@@ -314,6 +312,7 @@ a:hover , a:hover svg {
 .main {
   overflow-y: auto;
   overflow-x: hidden;
+  height: 100vh;
 }
 
 .centered {
@@ -323,7 +322,6 @@ a:hover , a:hover svg {
 
 .responsive-hints{
   font-size: 14px;
-  font-weight: bold;
   display: none;
 }
 
