additional responsive tweaks

--- a/client/less/main.less
+++ b/client/less/main.less
@@ -330,6 +330,23 @@ a:hover , a:hover svg {
 only screen
     and (min-device-width: 320px) and (max-device-width: 736px) and (orientation: landscape) {
 
+      #header {
+        padding: 15px 5px 0 0;
+      }
+
+      #header h1 {
+        font-size: 25px
+      }
+
+      #header > svg {
+        padding: 5px;
+        width: 30px;
+      }
+
+      .map-basemap-toggle { 
+        display: none;
+      }
+
       .second-nav{
         // display: none;
         opacity: 0;
