tweaked styling to apply to tool nav menu

--- a/client/less/components/Sidebar.less
+++ b/client/less/components/Sidebar.less
@@ -94,7 +94,7 @@
   clear: left;
 }
 
-.second-nav .map-menu-layer-name:hover, .second-nav li>h3:hover { 
+.second-nav .map-menu-layer-name:hover, .second-nav h3:hover { 
   cursor: pointer;
   background-color: rgba(147, 195, 124, 0.3);
 }
