--- a/client/less/components/Dashboard_1.less
+++ b/client/less/components/Dashboard_1.less
@@ -19,10 +19,10 @@
 .widget{
   background-color: white;
   overflow: hidden;
-  border: solid 1px white;
-  border-radius: 10px;
+  border: solid 1px lightgray;
+  border-radius: 3px;
   padding: 0px;
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.15), 0px 0px 5px rgba(0, 0, 0, 0.15);
+  // box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.15), 0px 0px 5px rgba(0, 0, 0, 0.15);
 }
 
 .table {
