--- a/client/less/components/Home.less
+++ b/client/less/components/Home.less
@@ -1,7 +1,7 @@
-.bg-light {
-  background: rgba(255, 255, 255, 0.8);
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.15), 0px 0px 5px rgba(0, 0, 0, 0.15);
-}
+// .bg-light {
+//   background: rgba(255, 255, 255, 0.8);
+//   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.15), 0px 0px 5px rgba(0, 0, 0, 0.15);
+// }
 
 
 .home-heading{
@@ -48,13 +48,12 @@
 }
 
 .home-options{
-  border-radius: 8px;
+  border-radius: 3px;
   transition: 0.5s ease;
   overflow-x: hidden;
   overflow-y: auto;
   height: 38vh;
-  background: lightgray;
-  border: solid 3px #9CCE89;
+  border: solid 1px lightgray;
 }
 
 .home-options:hover{
@@ -62,6 +61,9 @@
 }
 
 .home-options > p{
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-height: 115px;
   clear: left;
 }
 
