--- a/client/less/components/Sidebar.less
+++ b/client/less/components/Sidebar.less
@@ -10,7 +10,7 @@
   // width: @toolbar-width + @sidebar-width;
   height: 100%;
   position: absolute;
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.15), 0px 0px 5px rgba(0, 0, 0, 0.15);
+  // box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.15), 0px 0px 5px rgba(0, 0, 0, 0.15);
 }
 
 
@@ -64,7 +64,8 @@
   height: 100%;
   font-size: 8pt;
   overflow-y: scroll;
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.15), 0px 0px 5px rgba(0, 0, 0, 0.15);
+  // box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.15), 0px 0px 5px rgba(0, 0, 0, 0.15);
+  border-right: 1px lightgray;
 }
 
 .second-nav .map-header {
